package com.licenta.socialmedia.service.implementation;

public class RoleService {
}
