@startuml

title __IMPLEMENTATION's Class Diagram__\n

  namespace  {
    namespace om.licenta.socialmedia {
      namespace service {
        namespace implementation {
          class com.licenta.socialmedia.service.implementation.ChatMessageService {
              - template : SimpMessagingTemplate
              + ChatMessageService()
              + add()
              + delete()
              + findById()
              + getAll()
              + getLastMessages()
              + openChat()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.licenta.socialmedia {
      namespace service {
        namespace implementation {
          class com.licenta.socialmedia.service.implementation.ChatService {
              + add()
              + delete()
              + findById()
              + findByUsers()
              + getAll()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.licenta.socialmedia {
      namespace service {
        namespace implementation {
          class com.licenta.socialmedia.service.implementation.CommentService {
              + add()
              + delete()
              + findById()
              + getAll()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.licenta.socialmedia {
      namespace service {
        namespace implementation {
          class com.licenta.socialmedia.service.implementation.FollowService {
              ~ template : SimpMessagingTemplate
              + FollowService()
              + add()
              + delete()
              + getAll()
              + getFollowByUsers()
              + getFollowers()
              + getFollowing()
              + getSuggestions()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.licenta.socialmedia {
      namespace service {
        namespace implementation {
          class com.licenta.socialmedia.service.implementation.LikeService {
              + LikeService()
              + add()
              + delete()
              + findById()
              + getAll()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.licenta.socialmedia {
      namespace service {
        namespace implementation {
          class com.licenta.socialmedia.service.implementation.MyUserDetailsService {
              + loadUserByUsername()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.licenta.socialmedia {
      namespace service {
        namespace implementation {
          class com.licenta.socialmedia.service.implementation.NotificationService {
              + add()
              + delete()
              + findById()
              + findNewNotifications()
              + findPersonalNotifications()
              + getAll()
              + updateNotifications()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.licenta.socialmedia {
      namespace service {
        namespace implementation {
          class com.licenta.socialmedia.service.implementation.PostService {
              ~ template : SimpMessagingTemplate
              + add()
              + delete()
              + findById()
              + getAll()
              + getNewsFeedPosts()
              + getPersonalPosts()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.licenta.socialmedia {
      namespace service {
        namespace implementation {
          class com.licenta.socialmedia.service.implementation.ProfileService {
              + add()
              + delete()
              + findById()
              + findByUser()
              + getAll()
              + search()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.licenta.socialmedia {
      namespace service {
        namespace implementation {
          class com.licenta.socialmedia.service.implementation.RoleService {
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.licenta.socialmedia {
      namespace service {
        namespace implementation {
          class com.licenta.socialmedia.service.implementation.SecurityService {
              - authenticationManager : AuthenticationManager
              - userDetailsService : UserDetailsService
              + isAuthenticated()
              + login()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.licenta.socialmedia {
      namespace service {
        namespace implementation {
          class com.licenta.socialmedia.service.implementation.StoryService {
              + StoryService()
              + add()
              + delete()
              + findById()
              + getAll()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.licenta.socialmedia {
      namespace service {
        namespace implementation {
          class com.licenta.socialmedia.service.implementation.UserService {
              - bCryptPasswordEncoder : BCryptPasswordEncoder
              + add()
              + delete()
              + findById()
              + findByUsername()
              + getAll()
              + updateWithoutPassword()
          }
        }
      }
    }
  }
  

  com.licenta.socialmedia.service.implementation.ChatMessageService .up.|> com.licenta.socialmedia.service.IChatMessageService
  com.licenta.socialmedia.service.implementation.ChatMessageService o-- com.licenta.socialmedia.repository.IChatMessageRepository : messageRepository
  com.licenta.socialmedia.service.implementation.ChatService .up.|> com.licenta.socialmedia.service.IChatService
  com.licenta.socialmedia.service.implementation.ChatService o-- com.licenta.socialmedia.repository.IChatRepository : chatRepository
  com.licenta.socialmedia.service.implementation.CommentService .up.|> com.licenta.socialmedia.service.ICommentService
  com.licenta.socialmedia.service.implementation.CommentService o-- com.licenta.socialmedia.repository.ICommentRepository : commentRepository
  com.licenta.socialmedia.service.implementation.FollowService .up.|> com.licenta.socialmedia.service.IFollowService
  com.licenta.socialmedia.service.implementation.FollowService o-- com.licenta.socialmedia.repository.IFollowRepository : followRepository
  com.licenta.socialmedia.service.implementation.FollowService o-- com.licenta.socialmedia.repository.IProfileRepository : profileRepository
  com.licenta.socialmedia.service.implementation.FollowService o-- com.licenta.socialmedia.repository.IUserRepository : userRepository
  com.licenta.socialmedia.service.implementation.LikeService .up.|> com.licenta.socialmedia.service.ILikeService
  com.licenta.socialmedia.service.implementation.LikeService o-- com.licenta.socialmedia.repository.ILikeRepository : likeRepository
  com.licenta.socialmedia.service.implementation.MyUserDetailsService .up.|> org.springframework.security.core.userdetails.UserDetailsService
  com.licenta.socialmedia.service.implementation.MyUserDetailsService o-- com.licenta.socialmedia.repository.IUserRepository : userRepository
  com.licenta.socialmedia.service.implementation.NotificationService .up.|> com.licenta.socialmedia.service.INotificationService
  com.licenta.socialmedia.service.implementation.NotificationService o-- com.licenta.socialmedia.repository.INotificationRepository : notificationRepository
  com.licenta.socialmedia.service.implementation.PostService .up.|> com.licenta.socialmedia.service.IPostService
  com.licenta.socialmedia.service.implementation.PostService o-- com.licenta.socialmedia.repository.IPostRepository : postRepository
  com.licenta.socialmedia.service.implementation.PostService o-- com.licenta.socialmedia.repository.IUserRepository : userRepository
  com.licenta.socialmedia.service.implementation.ProfileService .up.|> com.licenta.socialmedia.service.IProfileService
  com.licenta.socialmedia.service.implementation.ProfileService o-- com.licenta.socialmedia.repository.IProfileRepository : profileRepository
  com.licenta.socialmedia.service.implementation.SecurityService .up.|> com.licenta.socialmedia.service.ISecurityService
  com.licenta.socialmedia.service.implementation.SecurityService o-- com.licenta.socialmedia.security.JwtUtil : jwtUtils
  com.licenta.socialmedia.service.implementation.SecurityService o-- com.licenta.socialmedia.repository.IUserRepository : userRepository
  com.licenta.socialmedia.service.implementation.StoryService .up.|> com.licenta.socialmedia.service.IStoryService
  com.licenta.socialmedia.service.implementation.StoryService o-- com.licenta.socialmedia.service.implementation.FollowService : followService
  com.licenta.socialmedia.service.implementation.StoryService o-- com.licenta.socialmedia.repository.IStoryRepository : storyRepository
  com.licenta.socialmedia.service.implementation.StoryService o-- com.licenta.socialmedia.service.implementation.UserService : userService
  com.licenta.socialmedia.service.implementation.UserService .up.|> com.licenta.socialmedia.service.IUserService
  com.licenta.socialmedia.service.implementation.UserService o-- com.licenta.socialmedia.repository.IUserRepository : userRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
